[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "raystation-stubs"
version = "2025.1.0"
description = "Type stubs for RayStation scripting API (PEP 561)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["raystation", "stubs", "type-hints", "pylance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Stubs Only",
]

[tool.setuptools.packages.find]
include = ["raystation*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
